<resources>

    <string name="app_name">红豆说</string>
    <string name="action_settings">设置</string>

    <!-- AppBarLayout string -->
    <string name="author_name">LiYaBin</string>
    <string name="action_about">关于</string>
    <string name="action_share">分享</string>
    <string name="action_like">喜欢</string>
    <string name="action_collect">收藏</string>
    <string name="open">open</string>
    <string name="close">close</string>


</resources>
